fixed spacing

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -1265,7 +1265,6 @@ form [type='radio'] {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding-left: 200px;
   transform: translate(5%, -10%);
 }
 
